kubernetes/apps/networking/pihole/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: networking
  annotations:
    tailscale.com/hostname: "pihole-dns"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: pihole
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
