kubernetes/apps/networking/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.saradomin
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-admin
                port:
                  number: 80
